apps/nicolas-cage/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nicolas-cage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nicolas-cage
  namespace: nicolas-cage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nicolas-cage
  template:
    metadata:
      labels:
        app: nicolas-cage
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: hostname-script
          mountPath: /docker-entrypoint.d/01-hostname.sh
          subPath: 01-hostname.sh
      volumes:
      - name: nginx-config
        configMap:
          name: nicolas-cage
      - name: html
        configMap:
          name: nicolas-cage
      - name: hostname-script
        configMap:
          name: nicolas-cage-hostname
          defaultMode: 0755
---
apiVersion: v1
kind: Service
metadata:
  name: nicolas-cage
  namespace: nicolas-cage
spec:
  selector:
    app: nicolas-cage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
